<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/font_sizes"
        android:entryValues="@array/font_sizes"
        android:key="settingFontSizes"
        android:defaultValue="@string/font_size_dafault"
        android:title="@string/font_size_title"
        android:summary="@string/font_size_summary"
        android:persistent="true" />

    <ListPreference
        android:entries="@array/operators"
        android:entryValues="@array/operators_value"
        android:key="settingOperators"
        android:defaultValue="4"
        android:title="@string/operators_title"
        android:summary="@string/operators_summary"
        android:persistent="true" />

    <ListPreference
        android:entries="@array/number_of_operands_trigger"
        android:entryValues="@array/number_of_operands_trigger"
        android:key="settingNumberOfOperandsTrigger"
        android:defaultValue="5"
        android:title="@string/number_of_operands_trigger_title"
        android:summary="@string/number_of_operands_trigger_summary"
        android:persistent="true" />

    <ListPreference
        android:entries="@array/number_of_operands_in_gamestart"
        android:entryValues="@array/number_of_operands_in_gamestart"
        android:key="settingNumberOfOperands"
        android:defaultValue="2"
        android:title="@string/number_of_operands_title"
        android:summary="@string/number_of_operands_summary"
        android:persistent="true" />



</PreferenceScreen>