<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/layout_padding_horizontal"
    android:paddingRight="@dimen/layout_padding_horizontal"
    tools:context="com.thcplusplus.mathter.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView

        android:id="@+id/equationTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingLeft="@dimen/equation_edittext_padding"
        android:paddingRight="@dimen/equation_edittext_padding" />

    <ProgressBar
        android:id="@+id/timeLeftProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/progress_horizontal_margin"
        android:layout_marginRight="@dimen/progress_horizontal_margin"
        android:layout_weight="0.01"
        android:max="@integer/default_start_time"
        android:progress="@integer/default_start_time"/>

    <EditText
        android:id="@+id/answerEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:digits="-0123456789"
        android:gravity="center"
        android:hint="@string/answer_edittext_hint"
        android:inputType="numberSigned"
        android:paddingLeft="@dimen/equation_edittext_padding"
        android:paddingRight="@dimen/equation_edittext_padding" />

    <LinearLayout
        android:id="@+id/lytSecondPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"

        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/layout_padding_horizontal"
            android:paddingRight="@dimen/layout_padding_horizontal">

            <Button
                android:id="@+id/nextButton"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:drawableRight="@drawable/ic_fast_forward_black_24dp"
                android:gravity="center"
                android:text="@string/next_button_text"
                android:textColor="@color/next_button_textcolor"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/timerButton"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableRight="@drawable/ic_alarm_black_24dp"
                android:gravity="center"
                android:textColor="@color/timer_button_textcolor"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/checkButton"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:drawableRight="@drawable/ic_check_circle_black_24dp"
                android:gravity="center"
                android:text="@string/check_button_text"
                android:textColor="@color/check_button_textcolor"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:orientation="horizontal"
            >

            <TextView

                android:id="@+id/timePrizeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                >

            </LinearLayout>

            <TextView

                android:id="@+id/allTimePrizesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:paddingLeft="@dimen/equation_edittext_padding"
                android:paddingRight="@dimen/equation_edittext_padding"
                android:text="0"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/noteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/equation_edittext_padding"
            android:paddingRight="@dimen/equation_edittext_padding"
            android:text="@string/note_this"
            android:textStyle="bold"
            />
    </LinearLayout>

</LinearLayout>
